Practicando con la etiqueta img

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -16,6 +16,11 @@
     <main>
         <ul>
             <li>Frutas</li>
+            <section>
+                <figure>
+                    <img src="./pics/fruts.jpg" alt="Descripción en caso las imagenes no carguen">
+                </figure>
+            </section>
             <ol>
                 <li>Manzana</li>
                 <li>Platano</li>                
@@ -23,6 +28,11 @@
         </ul>
         <ul>
             <li>Carnes</li>
+            <section>
+                <figure>
+                    <img src="./pics/meats.jpg" alt="Descripción en caso de no cargar la imagen">
+                </figure>
+            </section>
             <ol>
                 <li>Pollo</li>
                 <li>Carne Molida</li>
@@ -30,6 +40,11 @@
         </ul>
         <ul>
             <li>Verduras</li>
+            <section>
+                <figure>
+                    <img src="./pics/vegetables.jpg" alt="Descripción en caso de no cargar la imagen">
+                </figure>
+            </section>
             <ol>
                 <li>Limón</li>
                 <li><a href="https://www.youtube.com/watch?v=orHkDYNFwEg&list=RDGenMRomnI8c&index=4" target="_blank">Zanahoria</a></li>
