--- a/claseImg/index.html
+++ b/claseImg/index.html
@@ -13,7 +13,8 @@
         <section>
             <figure>
                 <img src="./pics/strawberry.jpg" alt="Descripción en caso la imagen no cargue">
-            </figure>
+                <figcaption>Es una descripcion de la imagen de arriba</figcaption>
+            </figure>            
         </section>
     </main>
 </body>
