Agregamos figcaption con una descripción de la imagen

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -19,6 +19,7 @@
             <section>
                 <figure>
                     <img src="./pics/fruts.jpg" alt="Descripción en caso las imagenes no carguen">
+                    <figcaption>Frutas para obtener fibra</figcaption>
                 </figure>
             </section>
             <ol>
@@ -31,6 +32,7 @@
             <section>
                 <figure>
                     <img src="./pics/meats.jpg" alt="Descripción en caso de no cargar la imagen">
+                    <figcaption>Carnes para obtener proteinas</figcaption>
                 </figure>
             </section>
             <ol>
@@ -43,6 +45,7 @@
             <section>
                 <figure>
                     <img src="./pics/vegetables.jpg" alt="Descripción en caso de no cargar la imagen">
+                    <figcaption>Verduras para obtener variedad de vitaminas</figcaption>
                 </figure>
             </section>
             <ol>
