Agregamos etiqueta video controls preload y source con parametros de tiempo de carga

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -53,6 +53,12 @@
                 <li><a href="https://www.youtube.com/watch?v=orHkDYNFwEg&list=RDGenMRomnI8c&index=4" target="_blank">Zanahoria</a></li>
             </ol>
         </ul>
+        <section>
+            <video controls preload="auto">
+                <source src="./algoMejor.mp4#t=6,11"/>
+                <source src="./algoMejor.m4v#t=6,11"/> 
+            </video>        
+        </section>        
     </main>
 
     <footer>
