Agregamos formularios usando form label span input de tipo text y un placeholder

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -58,7 +58,23 @@
                 <source src="./algoMejor.mp4#t=6,11"/>
                 <source src="./algoMejor.m4v#t=6,11"/> 
             </video>        
-        </section>        
+        </section>
+        <section>
+            <form action="">
+                <label for="Recomendaciones">
+                    <span>Algo par recomendar</span>
+                    <input type="text" name="" id="Recomendaciones" placeholder="Here">
+                </label>                        
+                <label for="Recetas">
+                    <span>Recetas para mi</span>
+                    <input type="text" name="" id="Recetas" placeholder="Here">
+                </label>            
+                <label for="usuario">
+                    <span>Nombre del usuario</span>
+                    <input type="text" name="" id="usuario" placeholder="Here">
+                </label>
+            </form>
+        </section>    
     </main>
 
     <footer>
