Creamos un calendario de manera rapida con form label span input datetime-local name y submit para enviar

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -74,7 +74,16 @@
                     <input type="text" name="" id="usuario" placeholder="Here">
                 </label>
             </form>
-        </section>    
+        </section>
+        <section>
+            <form action="">
+                <label for="calendar">
+                    <span>Calendario rapido</span>
+                    <input type="datetime-local" name="calendar" id="calendar">
+                </label>
+                <input type="submit">
+            </form>
+        </section>  
     </main>
 
     <footer>
