--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -83,7 +83,28 @@
                 </label>
                 <input type="submit">
             </form>
-        </section>  
+        </section>
+        <section>
+            <form action="">
+                <label for="name">
+                    <span>Nombre</span>
+                    <input type="text" name="name" id="name" autocomplete="name" required/>
+                </label>
+                <label for="email">
+                    <span>Correo</span>
+                    <input type="email" name="email" id="email" autocomplete="email" required>
+                </label>
+                <label for="country">
+                    <span>Pais</span>
+                    <input type="text" name="country" id="country" autocomplete="country" required>
+                </label>
+                <label for="cp">
+                    <span>Código Postal</span>
+                    <input type="text" name="cp" id="cp" autocomplete="postal-code" required>
+                </label>
+                <input type="submit">
+            </form>
+        </section>
     </main>
 
     <footer>
