Etiquetas input con atributo list, datalist con atributo id y option con atributo value

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -105,6 +105,16 @@
                 <input type="submit">
             </form>
         </section>
+        <section>
+            <input list="compras">
+            <datalist id="compras">
+                <option value="Manzanas"></option>
+                <option value="Peras"></option>
+                <option value="Carnes"></option>
+                <option value="Zanahorias"></option>
+                <option value="Tomates"></option>
+            </datalist>
+        </section>
     </main>
 
     <footer>
