input submit para formularios y button para cualquier otra clase de botones

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -59,7 +59,7 @@
                 <source src="./algoMejor.m4v#t=6,11"/> 
             </video>
         </section>
-        <section>
+        <section>3.0
             <form action="">
                 <label for="Recomendaciones">
                     <span>Algo par recomendar</span>
@@ -114,6 +114,10 @@
                 <option value="Zanahorias"></option>
                 <option value="Tomates"></option>
             </datalist>
+        </section>
+        <section>
+            <input type="submit" value="Inputcito">
+            <button type="submit">Buttoncito</button>
         </section>
     </main>
 
