Combinador Hermano adyacente o cercano (+) Adjacent Siblings

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -65,11 +65,11 @@
         <section>
             <h3>Receta recomendada: Frutas</h3>
             <video class="videoUno" controls preload="auto">                
-                <source src="./recetaFrutas.mp4#t=20,100"/>                
+                <source src="./videos/recetaFrutas.mp4#t=20,100"/>                
             </video>
             <h3>Receta recomendada: Verduras</h3>
             <video class="videoDos" controls preload="auto">
-                <source src="./recetaVerduras.mp4#t=40,230"/>
+                <source src="./videos/recetaVerduras.mp4#t=40,230"/>
             </video>
         </section>
         <section>
