--- a/CSS/claseCombinadores/index.html
+++ b/CSS/claseCombinadores/index.html
@@ -11,13 +11,18 @@
 </head>
 <body>
     <div>
-        <h2>Soy un h2</h2>
-        <p>Soy un p 1</p>
-        <h2>Soy un h2</h2>
-        <h3>Soy un h3</h3>
-        <p>Soy un p 2</p>
-        <h2>Soy un h2</h2>
-        <p>Soy un p 3</p>        
+        <article>
+            <p>Soy un texto</p>
+        </article>
+        <article>
+            <p>Soy un texto</p>
+        </article>
+        <section>
+            <div>
+                <p>Soy un texto</p>
+            </div>
+        </section>
+        <p>Soy un texto</p>
     </div>
 </body>
 </html>
