Nuevos cambios al reto - clase 37

--- a/CSS/Reto/index.html
+++ b/CSS/Reto/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>V-Rock</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body>    
     <section class="oneSection">
         <figure class="oneFigure">
             <img src="./pics/gtaFM.png" alt="Descripción en caso la imagen no carge">
-            <figcaption>Radio V-Rock [Grand Theft Auto: Vice City]</figcaption>
+            <!--<figcaption>Radio V-Rock [Grand Theft Auto: Vice City]</figcaption>-->
         </figure>
     </section>
     <div class="oneDiv">
+            <h2 class="oneTitle">V-Rock [Grand Theft Auto: Vice City]</h2>
             <p class="oneP">
             «Una colección implacable de bangers del Hard Rock traídos para ti por el inigualable Lazlow. Cuando el Rock & Roll era todo sobre vivir y tocar duro. Con material clásico de bandas como Judas Priest y Ozzy Osbourne.» <br>
             ~ Descripción del sitio web.
