Cambios para responsive design incompletos

--- a/proyectoLoboSolitario/index.html
+++ b/proyectoLoboSolitario/index.html
@@ -8,6 +8,11 @@
     <meta name="robots" content="index, follow">
     <title>Supermarket List</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./tablet.css" media="screen and (min-width:600px)">
 </head>
 <body>
     <header class="header-title">
